2009-04-30 Braden McDaniel  <braden@endoframe.com>

	Added abstract node type openvrml::background_node.

	* src/libopenvrml/openvrml/local/externproto.cpp
	(openvrml::local::externproto_node::to_background()): Added
	implementation of openvrml::node::to_background.
	* src/libopenvrml/openvrml/local/externproto.h
	(openvrml::local::externproto): Override
	openvrml::node::to_background.
	* src/libopenvrml/openvrml/local/proto.cpp
	(openvrml::local::proto): Override openvrml::node::to_background.
	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node::to_background()): Added downcast function;
	default implementation returns 0.
	(openvrml::background_node::background_node(const node_type &,
	const boost::shared_ptr<openvrml::scope> &)): Construct a
	background_node.
	(openvrml::background_node::~background_node()): Destroy a
	background_node.
	(openvrml::background_node::to_background()): Return this.
	(openvrml::background_node::ground_angle() const): Delegate to
	do_ground_angle.
	(openvrml::background_node::ground_color() const): Delegate to
	do_ground_color.
	(openvrml::background_node::sky_angle() const): Delegate to
	do_sky_angle.
	(openvrml::background_node::sky_color() const): Delegate to
	do_sky_color.
	(openvrml::background_node::front() const): Delegate to do_front.
	(openvrml::background_node::back() const): Delegate to do_back.
	(openvrml::background_node::left() const): Delegate to do_left.
	(openvrml::background_node::right() const): Delegate to do_right.
	(openvrml::background_node::top() const): Delegate to do_top.
	(openvrml::background_node::bottom() const): Delegate to
	do_bottom.
	* src/libopenvrml/openvrml/node.h
	(openvrml::node): Added polymorphic "cast" function used by
	node_cast.
	(openvrml::node_cast<background_node *>(node *)): Specialize for
	background_node.
	(openvrml::background_node): Added background_node abstract node
	type.
	* src/libopenvrml/openvrml/viewer.cpp
	(openvrml::viewer::insert_background(const background_node &)):